--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -95,3 +95,10 @@ body {
   transition: all 0.5s ease;
   z-index: 1000; 
   overflow-y: auto; }
+.submenu {
+  display: none;
+}
+
+.submenu-parent:hover .submenu {
+  display: block;
+}
